Enhance utility modules and modernize implementations